--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -15,6 +15,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections4</artifactId>
+        </dependency>
     </dependencies>
-
 </project>
