--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -23,5 +23,9 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections4</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 </project>
