--- a/mini_framework/pom.xml
+++ b/mini_framework/pom.xml
@@ -44,6 +44,10 @@
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
     </dependencies>
  <build>
         <plugins>
