--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>mini_framework</module>
         <module>chapter3</module>
         <module>chapter4</module>
+        <module>chapter5</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,6 +31,8 @@
         <dbcp2.version>2.0.1</dbcp2.version>
         <jackson.version>2.4.4</jackson.version>
         <cglib.version>3.1</cglib.version>
+        <fileupload.version>1.3.1</fileupload.version>
+        <commons-io.version>1.3.2</commons-io.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -105,6 +108,16 @@
                 <groupId>cglib</groupId>
                 <artifactId>cglib</artifactId>
                 <version>${cglib.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>${fileupload.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
