--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <cglib.version>3.1</cglib.version>
         <fileupload.version>1.3.1</fileupload.version>
         <commons-io.version>1.3.2</commons-io.version>
+        <gson.verisoin>2.8.2</gson.verisoin>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -118,6 +119,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.verisoin}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
