--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>chapter3</module>
         <module>chapter4</module>
         <module>chapter5</module>
+        <module>mini_plugin_security</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,6 +35,8 @@
         <fileupload.version>1.3.1</fileupload.version>
         <commons-io.version>1.3.2</commons-io.version>
         <gson.verisoin>2.8.2</gson.verisoin>
+        <shiro.version>1.2.3</shiro.version>
+        <codec.version>1.10</codec.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -42,21 +45,21 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${javax.servlet.version}</version>
-                <scope>provided</scope>
+                <!--<scope>provided</scope>-->
             </dependency>
             <!-- JSP -->
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
                 <version>${jsp.version}</version>
-                <scope>provided</scope>
+                <!--<scope>provided</scope>-->
             </dependency>
             <!-- JSTL -->
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
                 <version>${jstl.version}</version>
-                <scope>runtime</scope>
+                <!--<scope>runtime</scope>-->
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -124,6 +127,21 @@
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>${gson.verisoin}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-core</artifactId>
+                <version>${shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-web</artifactId>
+                <version>${shiro.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${codec.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
