--- a/pom.xml
+++ b/pom.xml
@@ -49,21 +49,18 @@
                 <groupId>javax.servlet</groupId>
                 <artifactId>javax.servlet-api</artifactId>
                 <version>${javax.servlet.version}</version>
-                <!--<scope>provided</scope>-->
             </dependency>
             <!-- JSP -->
             <dependency>
                 <groupId>javax.servlet.jsp</groupId>
                 <artifactId>jsp-api</artifactId>
                 <version>${jsp.version}</version>
-                <!--<scope>provided</scope>-->
             </dependency>
             <!-- JSTL -->
             <dependency>
                 <groupId>javax.servlet</groupId>
                 <artifactId>jstl</artifactId>
                 <version>${jstl.version}</version>
-                <!--<scope>runtime</scope>-->
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
@@ -176,6 +173,11 @@
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
                 <artifactId>jackson-jaxrs-json-provider</artifactId>
                 <version>${fasterxml.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.oracle</groupId>
+                <artifactId>ojdbc6</artifactId>
+                <version>11.2.0.4.0-atlassian-hosted</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
