--- a/mini_framework/pom.xml
+++ b/mini_framework/pom.xml
@@ -51,6 +51,10 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
     </dependencies>
  <build>
         <plugins>
