--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,16 @@
                 <artifactId>snakeyaml</artifactId>
                 <version>${snake.yml.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.collections</groupId>
+                <artifactId>eclipse-collections-api</artifactId>
+                <version>9.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.collections</groupId>
+                <artifactId>eclipse-collections</artifactId>
+                <version>9.2.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
